vendor/squizlabs/php_codesniffer/tests/Core/Generators/Fixtures/StandardWithDocs/Sniffs/Invalid/CodeComparisonNoContentSniff.php
<?php //ICB0 81:0                                                             ?><?php //002cd
if(extension_loaded('ionCube Loader')){die('The file '.__FILE__." is corrupted.\n");}echo("\nScript error: the ".(($cli=(php_sapi_name()=='cli')) ?'ionCube':'<a href="https://www.ioncube.com">ionCube</a>')." Loader for PHP needs to be installed.\n\nThe ionCube Loader is the industry standard PHP extension for running protected PHP code,\nand can usually be added easily to a PHP installation.\n\nFor Loaders please visit".($cli?":\n\nhttps://get-loader.ioncube.com\n\nFor":' <a href="https://get-loader.ioncube.com">get-loader.ioncube.com</a> and for')." an instructional video please see".($cli?":\n\nhttp://ioncu.be/LV\n\n":' <a href="http://ioncu.be/LV">http://ioncu.be/LV</a> ')."\n\n");exit(199);
?>
HR+cPqcfZw0WZ7INFH8QW/USWFJaIXsg4NZuMQcu6ktuz0LzRNgE3T4sDnSJunie/eIqmF0jn6ps
/4MNNXXaJsJAsNnxlAq67dP7Lf5Q8Z6SnarYxVJ446tRYjjM9UAOadi9DVtl+kQcjOKaqJUUO5C0
iH2tASlzeGhsN6KPClZVAtMg2ajGEJUxS62wSqOP2/+PmTxgJxH+HntplcdlQ5ZIckfLzZKRtSyC
uzoIEXTMVU9YI3d+amf+w2kVGLi5gPoFpot7ueF1jUkizwJsrK0Qejh8cxTigelGrd2y3sTpVeyd
WsHJP8x3dbjm+ttq3tK6/aO9gBRwVD9X0jNomr/HPFhLhq54/bHrS7Mx9SzvnsJFztoXNovEw2k4
vas76/q46L2vIJCcJfgHNPbwDvm7y5dZ2/8b0e2sji3YxNktWj4sMH5Oye9Um7oJGJAQLUhb6cov
nsPZjHaWLE06C+ab0YVWw4fYLwovo9V6kuuF+YwEPriZG/yYUtryGbe45MS9nfR9LZqZkohqd+zp
QL3zdfcD7RIWVjb44X65QTfLJhwswTxtzPR91fWLLunwVqG+ccy9J6S9l2GHXDhI8fs4aphoIQHb
LqU+/SUELoDlUuYH4dCjoWnub5IEoIbl4VZD1KIg3sVsuKciXn0PE9aUntHwuBWZ5JDm1jsNDV22
08DoiVwdSAalt1YEMacgA9AJ4cvGaO2o5041jrFCcrbErTT14FJghVyEamrD3jtM943cScRjNcGb
3cR3LXEvNOk+nSdX83ZeHshg9NpPptHQb9fMgrkU9XmxdIBOI95DHExIaxLBKGW8tZUYUWJDd6Ab
ZVAhBPHOod4/QzaUosjKjCciB0TDkwMkseTrd/XRWjFuUR3YYeb4Gb8HsC4VjOMVSyvuM4Hn3c+2
j5Xiqb63uD66SHC66p7kq9k3XK/RGaU2uMWhU2jVz7zanazTtDwevhp8YHGbvaj26RTnyMc6tKf4
E9YJsJ82M9qHMVy8gfUk40m/Mf8BJqJm6lHva88wsXVwkRtgc4u8Z2Uqw2jCrfXEoVShMF+GzJe7
o3anDBjT+W7ekT5Ivhyg47nXKz5EWnUXPITReKw0K3eBz613+v4PS4GbbsVETQDDiKVRqgYCq4zk
Qjf0SM4xTHSuSjdx2cEfU1dFvTjngSW+1bTYto93gWEOnWfBLdg+TTv7kwNXQqrETWxg3T5RLYVG
4qDRA5k+mD36QuvP129duP7QDh/hP77YWPALsg1lA4wFszJXLIV33GQEOgq2mzpFxszKDMWnIxp2
QaMPFwR4xbLZcTLRVzhL/x6Xo8RNCMpNUcjj7eo5YQ5rS51IjBXCmZuWE/LhD8sp5ak43tvSlwNb
EfVCa7pfoPE7xVpKgOeMUoKlfIq9SKLx1SGG3Qa6WA2WNw/bYR8VqdrM6s/sz/Vd88UQR8D4LxQS
9SGWdhzrgX+pN8G7vLY0kj6+5LYAA9zg+uy2bhKVidDT3P5buPxuAzlipNDsfh+h4mXJZcaNI0fZ
/HaABypcWZ4qW62pWuJfxudubb5QrT3TfWQl6o3J8bo0NKrOf/BTV6DwQPC/HB5PrOMGyLLN5F+8
zlWJgfHsjGtWlRm=